--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@formkit/themes": "^1.0.0-beta.2",
+    "@formkit/vue": "^1.0.0-beta.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-scroll-div": "^1.3.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
